make changes for setting port

--- a/core/server/config/env/config.production.json
+++ b/core/server/config/env/config.production.json
@@ -5,7 +5,8 @@
             "host"     : "tj5iv8piornf713y.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
             "user"     : "iwbsymrzlvam1n5t",
             "password" : "dxnxeguhyjtca3jt",
-            "database" : "nwzcjeadjc5m7v7f"
+            "database" : "nwzcjeadjc5m7v7f",
+            "port"     : 3306
         }
     },
     "paths": {
