--- a/package.json
+++ b/package.json
@@ -102,9 +102,9 @@
   "devDependencies": {
     "eslint": "4.19.1",
     "eslint-plugin-ghost": "0.0.27",
-    "grunt": "1.0.3",
+    "grunt": "^1.0.3",
     "grunt-bg-shell": "2.3.3",
-    "grunt-cli": "1.2.0",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "1.1.0",
     "grunt-contrib-compress": "1.4.3",
     "grunt-contrib-copy": "1.0.0",
